ReceiverRule now has configurable device name